corrected load package calls
replaced devtools::load_all() with library(nmecr). Removed called for loading dplyr, lubridate, and tidyr as they are loaded as part of nmecr already

--- a/vignettes/nmecr_institutional_facilties_example.Rmd
+++ b/vignettes/nmecr_institutional_facilties_example.Rmd
@@ -18,11 +18,8 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 
-devtools::load_all()
-library(dplyr)
-library(lubridate)
+library(nmecr)
 library(ggplot2)
-library(tidyr)
 ```
 
 ## Normalized Metered Energy Consumption (NMEC)
