--- a/vignettes/nmecr_overview.Rmd
+++ b/vignettes/nmecr_overview.Rmd
@@ -18,11 +18,8 @@ knitr::opts_chunk$set(
   comment = "#>"
 )
 
-devtools::load_all()
-library(dplyr)
-library(lubridate)
+library(nmecr)
 library(ggplot2)
-library(tidyr)
 ```
 
 The `nmecr` package was written to integrate the past efforts of the energy efficiency industry to streamline meter-based Measurement & Verification of EE projects. It brings together simple linear regression with outside air temperature, the change point models (from ASHRAE 1050-RP), and the Time-of-Week and Temperature model (developed by the Lawrence Berkeley National Laboratory) and builds enhancements upon these by accurately predicting the energy use profiles of facilities with multiple operating modes.  
